fix mobile overflow

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,9 @@ body{
 span{
   color: #02B5E3ff;
 }
+@media screen and (max-width: 700px){
+  body{
+    font-family: 'Newsreader', serif;
+    overflow-x: hidden;
+  }
+}
